--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -18,15 +18,14 @@
             android:id="@+id/user_thumbnail"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/qi_thumbnail"/>
+            android:layout_margin="10dp" />
 
         <TextView android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/user_thumbnail"
             android:layout_alignParentTop="true"
-            android:paddingTop="8dp"
+            android:paddingTop="20dp"
             android:layout_margin="5dp"
             android:textSize="15sp"
             android:textStyle="bold" />
