--- a/app/src/main/res/layout/listview_event_item.xml
+++ b/app/src/main/res/layout/listview_event_item.xml
@@ -4,13 +4,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
+    android:padding="6dp"
     android:background="#ffffff">
 
     <TextView android:id="@+id/textView_eventTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:padding="4dp"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -18,26 +20,26 @@
     <TextView android:id="@+id/textView_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="4dp"
         android:layout_below="@+id/textView_eventTitle"
-        android:textSize="12sp" />
+        android:padding="4dp"
+        android:textSize="11sp" />
 
     <TextView android:id="@+id/textView_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="4dp"
         android:text=" To "
         android:layout_below="@+id/textView_eventTitle"
         android:layout_toRightOf="@+id/textView_start"
-        android:textSize="12sp"
+        android:textSize="11sp"
+        android:padding="4dp"
         android:textStyle="bold"/>
 
     <TextView android:id="@+id/textView_end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="4dp"
         android:layout_toRightOf="@+id/textView_to"
         android:layout_below="@+id/textView_eventTitle"
-        android:textSize="12sp" />
+        android:padding="4dp"
+        android:textSize="11sp" />
 
 </RelativeLayout>
