--- a/app/src/main/res/layout/listview_user_item.xml
+++ b/app/src/main/res/layout/listview_user_item.xml
@@ -9,26 +9,18 @@
 
     <ImageView
         android:id="@+id/user_thumbnail"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_margin="10dp" />
 
     <TextView android:id="@+id/user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/user_thumbnail"
-        android:layout_alignParentTop="true"
-        android:paddingTop="8dp"
+        android:paddingTop="16dp"
         android:layout_margin="5dp"
         android:textSize="15sp"
         android:textStyle="bold" />
 
-    <TextView android:id="@+id/user_Tagline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_toRightOf="@+id/user_thumbnail"
-        android:layout_below="@+id/user_name"
-        android:textSize="12sp" />
 
 </RelativeLayout>
