--- a/app/src/main/res/layout/activity_show_event_users_map.xml
+++ b/app/src/main/res/layout/activity_show_event_users_map.xml
@@ -9,4 +9,12 @@
     <TextView android:text="This is map view to show users on map" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <fragment
+        android:id="@+id/map_fragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:layout_marginTop="16dp" />
+
 </RelativeLayout>
