add TrackVer1.0 to master

--- a/app/src/main/res/layout/activity_show_event_users_map.xml
+++ b/app/src/main/res/layout/activity_show_event_users_map.xml
@@ -12,9 +12,8 @@
     <fragment
         android:id="@+id/map_fragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="16dp" />
 
 </RelativeLayout>
