add ski track list

--- a/app/src/main/res/layout/activity_track_container.xml
+++ b/app/src/main/res/layout/activity_track_container.xml
@@ -1,8 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.sjsu.qi.skibuddy.EventFragment"
-    android:id="@+id/Fragment_event">
+    android:id="@+id/activity_fragment_container"
+    android:background="#e7f6ff"
+    tools:context="edu.sjsu.qi.onlinecommunity.ActivityCourseContainer">
 
     <TextView
         android:layout_width="match_parent"
@@ -16,7 +19,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:divider="@android:color/transparent"
@@ -24,14 +27,5 @@
         android:id="@+id/listView_track">
     </ListView>
 
-    <Button
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_margin="10dp"
-        android:id="@+id/button_Start"
-        android:layout_gravity="right|bottom"
-        android:scaleType="fitXY"
-        android:background="@drawable/ic_track" />
 
-
-</FrameLayout>
+</LinearLayout>
